--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: setwidth
-Version: 1.1.0.9002
+Version: 1.1.0.9004
 Title: Automatically Set the Width Option on Terminal Emulators
 Authors@R: c(person("Jakson", "Aquino",
                      role = "aut", 
@@ -10,6 +10,6 @@ Authors@R: c(person("Jakson", "Aquino",
                      comment = c(ORCID = "0000-0001-5774-5036")))
 OS_type: unix
 Description: Automatically sets the value of options("width") when the
-   terminal emulator is resized. The functions of this package only work if R is compiled for Linux systems and it is running interactively in a terminal emulator.
+   terminal emulator is resized. The functions of this package only work if R is compiled for Unix systems and it is running interactively in a terminal emulator.
 License: GPL (>= 2)
 NeedsCompilation: yes
